--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                     <h1 class="text-4xl font-black mb-4">أسماء حركية أونلاين</h1>
                     <p class="mb-6 text-gray-300">العب مع أصدقائك في الوقت الفعلي!</p>
                     <input type="text" id="playerNameInput" placeholder="Enter Your Name (Optional)" class="w-full p-3 rounded-lg bg-gray-700 text-white border-2 border-gray-600 mb-4 focus:border-blue-500 focus:outline-none text-center">
-                    <button id="createGameBtn" class="w-full mb-4 px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg text-lg hover:bg-blue-500 transition disabled:bg-blue-900 disabled:cursor-not-allowed" disabled>Connecting...</button>
+                    <button id="createGameBtn" class="w-full mb-4 px-6 py-3 bg-blue-600 text-white font-semibold rounded-lg text-lg hover:bg-blue-500 transition disabled:bg-blue-900 disabled:cursor-not-allowed" disabled>جارٍ المصادقة...</button>
                     <div class="flex items-center gap-4">
                         <input type="text" id="joinGameIdInput" placeholder="Enter Game Code" class="flex-grow p-3 rounded-lg bg-gray-700 text-white border-2 border-gray-600 focus:border-green-500 focus:outline-none text-center">
-                        <button id="joinGameBtn" class="px-6 py-3 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-500 transition disabled:bg-green-900 disabled:cursor-not-allowed" disabled>Connecting...</button>
+                        <button id="joinGameBtn" class="px-6 py-3 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-500 transition disabled:bg-green-900 disabled:cursor-not-allowed" disabled>جارٍ المصادقة...</button>
                     </div>
                     <p id="start-error" class="text-red-400 mt-4 h-5"></p>
                 </div>
@@ -158,7 +158,10 @@
         const words = ["مصر", "نهر", "جمل", "هرم", "صحراء", "قمر", "شمس", "تفاح", "موز", "قطار", "سيارة", "طبيب", "مهندس", "مدرسة", "كتاب", "فيل", "أسد", "بحر", "جسر", "قلعة", "ملك", "فضاء", "نجمة", "سحابة", "مطر", "وقت", "ساعة", "مفتاح", "باب", "صندوق"];
 
         async function createNewGame() {
-            if (!user) { showError("Connecting... please wait a moment."); return; }
+            if (!user) {
+                alert("لم يكتمل الاتصال بالخادم بعد. الرجاء الانتظار لحظة والمحاولة مرة أخرى.");
+                return;
+            }
             const playerName = playerNameInput.value.trim() || `Player${Math.floor(Math.random() * 900) + 100}`;
             
             const gameId = Math.random().toString(36).substring(2, 7).toUpperCase();
@@ -183,12 +186,15 @@
                 joinGame(gameId);
             } catch (error) {
                 console.error("Error creating game:", error);
-                alert(`فشل إنشاء اللعبة. قد تكون المشكلة في قواعد الأمان بقاعدة البيانات.\n\nرسالة الخطأ:\n${error.message}`);
+                alert(`فشل إنشاء اللعبة. قد تكون المشكلة في قواعد الأمان بقاعدة البيانات.\n\nتأكد من أن قواعد Firestore Rules صحيحة.\n\nرسالة الخطأ التقنية:\n${error.message}`);
             }
         }
 
         async function joinGame(gameIdOverride = null) {
-            if (!user) { showError("Connecting... please wait a moment."); return; }
+            if (!user) {
+                alert("لم يكتمل الاتصال بالخادم بعد. الرجاء الانتظار لحظة والمحاولة مرة أخرى.");
+                return;
+            }
             const playerName = playerNameInput.value.trim() || `Player${Math.floor(Math.random() * 900) + 100}`;
 
             const gameId = (gameIdOverride || joinGameIdInput.value.toUpperCase().trim());
